--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <div class="header-right">
       <button class="btn ghost" id="nav-login">התחברות</button>
-      <button class="btn primary" id="nav-orders" style="display:none;">
+      <button class="btn primary" id="nav-orders" style="display:inline-block;">
         ההזמנות שלי
       </button>
       <button class="btn primary" id="nav-cart">
@@ -109,10 +109,10 @@
         <label>אימייל <input id="co-email" type="email" required /></label>
         <label>כתובת <input id="co-address" type="text" required /></label>
         <label>עיר <input id="co-city" type="text" required /></label>
-        <label>מיקוד <input id="co-zip" type="text" required /></label>
-        <label>מספר כרטיס <input id="co-card" type="text" required /></label>
-        <label>תוקף <input id="co-exp" type="text" required /></label>
-        <label>CVV <input id="co-cvv" type="text" required /></label>
+        <label>מיקוד <input id="co-zip" type="number" required /></label>
+        <label>מספר כרטיס <input id="co-card" type="number" required /></label>
+        <label>תוקף <input id="co-exp" type="number" required /></label>
+        <label>CVV <input id="co-cvv" type="number" required /></label>
 
         <div id="co-summary-text" class="modal-summary">סה״כ: 0 ₪</div>
 
